--- a/roles/commontools/tasks/main.yml
+++ b/roles/commontools/tasks/main.yml
@@ -5,3 +5,8 @@
     cache_valid_time: 3600
     pkg: "{{ commontools }}"
   tags: commontools
+
+- name: Set timezone 
+  timezone:
+    name: "{{ timezone }}"
+  tags: commontools
