--- a/roles/manage-ssh-access/tasks/main.yml
+++ b/roles/manage-ssh-access/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Update SSH keys
   authorized_key:
-    user: root
+    user: ubuntu
     key: "{{ lookup('pipe','cat files/pub_keys/*.pub') }}"
     state: present
     exclusive: yes
