--- a/roles/manage-firewall/defaults/main.yml
+++ b/roles/manage-firewall/defaults/main.yml
@@ -1,3 +1,16 @@
+# порты для серверов приложений и mysql
 app_http_port: '8080'
 app_https_port: '8443'
 mysql_port: '3306'
+
+# для сервера мониторинга 
+    # TCP 9090 — http для сервера прометеус.
+    # TCP 9093 — http для алерт менеджера.
+    # TCP и UDP 9094 — для алерт менеджера.
+    # TCP 9100 — для node_exporter.
+    
+prometheus_http: '9090'
+alert_manager_http: '9093'
+alert_manager: '9094'
+node_exporter: '9100' 
+
