--- a/roles/manage-firewall/defaults/main.yml
+++ b/roles/manage-firewall/defaults/main.yml
@@ -1,6 +1,6 @@
 # порты для серверов приложений и mysql
-app_http_port: '8080'
-app_https_port: '8443'
+app_http_port: '80'
+app_https_port: '443'
 mysql_port: '3306'
 
 # для сервера мониторинга 
@@ -10,6 +10,7 @@ mysql_port: '3306'
     # TCP 9100 — для node_exporter.
     
 prometheus_http: '9090'
+grafana: '3000'
 alert_manager_http: '9093'
 alert_manager: '9094'
 node_exporter: '9100' 
