--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -4,18 +4,17 @@ all:
     app02.devopsit.ru:
     db01.devopsit.ru:
     monitoring.devopsit.ru:
-    192.168.229.129:
+    # 192.168.229.129:
   children:
     appservers:
       hosts:
         app01.devopsit.ru:
         app02.devopsit.ru:
-        192.168.229.129:
+        # 192.168.229.131:
     dbservers:
       hosts:
         db01.devopsit.ru:
-        192.168.229.129:
-        192.168.229.131:
+        # 192.168.229.129:        
     monservers:
       hosts:
         monitoring.devopsit.ru:
@@ -25,8 +24,14 @@ all:
         app02.devopsit.ru:
         db01.devopsit.ru:
         monitoring.devopsit.ru:
-    test:
-      hosts:
-        192.168.229.129:
-        192.168.229.131:
+    # test:
+    #   hosts:
+    #     192.168.229.129:
+    #     192.168.229.131:
+    # test_db:
+    #   hosts:
+    #     192.168.229.129:
+    # test_app:
+    #   hosts:
+    #     192.168.229.131:
 
