--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,17 @@
-# This file is a template, and might need editing before it works on your project.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
 stages:          # List of stages for jobs, and their order of execution
-  - build
+#  - build
 #  - test
   - deploy
 
-build-job:       # This job runs in the build stage, which runs first.
-  stage: build
-  image:
-    name: ansible/ansible-runner:1.4.7
-  script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+#build-job:       # This job runs in the build stage, which runs first.
+#  stage: build
+#  image:
+#    name: ansible/ansible-runner:1.4.7
+#  script:
+#    - echo "Compiling the code..."
+#    - echo "Compile complete."
 
 #unit-test-job:   # This job runs in the test stage.
 #  stage: test    # It only starts when the job in the build stage completes successfully.
@@ -43,7 +30,9 @@ build-job:       # This job runs in the build stage, which runs first.
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy   # It only runs when *both* jobs in the test stage complete successfully.
   image:
-    name: ansible/ansible-runner:1.4.7 
+    name: williamyeh/ansible:ubuntu18.04
+  variables:
+    ANSIBLE_HOST_KEY_CHEKING: "False"
   script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+    - ansible --version
+  when: manual
