--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,4 +36,5 @@ deploy-job:      # This job runs in the deploy stage.
   script:
     - ansible --version
     - ls -la
+    - ansible-playbook test.yml -kKv
   when: manual
