--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,14 +31,13 @@ deploy-job:      # This job runs in the deploy stage.
   stage: deploy   # It only runs when *both* jobs in the test stage complete successfully.
   image:
     name: williamyeh/ansible:ubuntu18.04
-  variables:
-    ANSIBLE_HOST_KEY_CHEKING: "False"
   script:
     - mkdir ~/.ssh
     - echo $ssh_key > ~/.ssh/id_rsa
     - echo $ssh_key_pub > ~/.ssh/id_rsa.pub
     - cat ~/.ssh/id_rsa
     - cat ~/.ssh/id_rsa.pub
+    - export ANSIBLE_HOST_KEY_CHECKING=False
     - echo $ANSIBLE_HOST_KEY_CHECKING
     - ansible --version
     - ansible-playbook test.yml -u ubuntu -vvv --private-key ~/.ssh/id_rsa -i ./inventory/hosts.yml
