--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,10 +35,9 @@ deploy-job:      # This job runs in the deploy stage.
     - mkdir ~/.ssh
     - echo $ssh_key > ~/.ssh/id_rsa
     - echo $ssh_key_pub > ~/.ssh/id_rsa.pub
-    - cat ~/.ssh/id_rsa
-    - cat ~/.ssh/id_rsa.pub
+    - chmod 600 ~/.ssh/id_rsa
+    - chmod 644 ~/.ssh/id_rsa.pub
     - export ANSIBLE_HOST_KEY_CHECKING=False
-    - echo $ANSIBLE_HOST_KEY_CHECKING
     - ansible --version
     - ansible-playbook test.yml -u ubuntu -vvv --private-key ~/.ssh/id_rsa -i ./inventory/hosts.yml
   when: manual
