--- a/inventory/group_vars/appservers/vars.yml
+++ b/inventory/group_vars/appservers/vars.yml
@@ -1,36 +1,44 @@
 ---
 server_name: "devopsit.ru"  
+wp_version: 5.3.10
 # db_hostname: ""
 ssl_cert_path: "/etc/ssl"
+ssl_cert_source_path: "files/cert/"
 
+nginx_ssl_crt: "{{ ssl_cert_path }}/crt/{{ server_name }}.crt"
+nginx_ssl_key: "{{ ssl_cert_path }}/private/{{ server_name }}.key"
+
+
+nginx_remove_default_vhost: true
 nginx_vhosts:
-  - listen: "80"
-    server_name: "{{ server_name }} www.{{ server_name }}"
-    return: "301 https://{{ server_name }}$request_uri"
-    filename: "{{ server_name }}.80.conf"
+  # - listen: "80"
+  #   server_name: "{{ server_name }} www.{{ server_name }}"
+  #   return: "301 https://{{ server_name }}$request_uri"
+  #   filename: "{{ server_name }}.80.conf"
 
-  - listen: "443 ssl http2"
+  # - listen: "443 ssl http2"
+  - listen: "80"
     server_name: "{{ server_name }}"
-    root: "/var/www/wordpress"
+    root: "/var/www/{{ server_name }}/wordpress"
     index: "index.php index.html index.htm"
     error_page: "500 502 503 504  /50x.html"
     access_log: "/var/log/nginx/{{ server_name }}.access.log  main"
-    error_log: ""
+    error_log: "/var/log/nginx/{{ server_name }}.error.log"
     state: "present"
     template: "{{ nginx_vhost_template }}"
     filename: "{{ server_name }}.conf"
     extra_parameters: |
       location ~ \.php$ {
           fastcgi_split_path_info ^(.+\.php)(/.+)$;
-          fastcgi_pass localhost:9000;
+          fastcgi_pass 127.0.0.1:9000;
           fastcgi_index index.php;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           include fastcgi_params;
       }
-      ssl_certificate     {{ ssl_cert_path }}/crt/{{ server_name }}.crt;
-      ssl_certificate_key {{ ssl_cert_path }}/private/{{ server_name }}.key;
-      ssl_protocols       TLSv1.1 TLSv1.2;
-      ssl_ciphers         HIGH:!aNULL:!MD5;
+      # ssl_certificate     {{ nginx_ssl_crt }};
+      # ssl_certificate_key {{ nginx_ssl_key }};
+      # ssl_protocols       TLSv1.1 TLSv1.2;
+      # ssl_ciphers         HIGH:!aNULL:!MD5;
 
 php_memory_limit: "128M"
 php_enable_php_fpm: true
@@ -43,6 +51,7 @@ php_webserver_daemon: "nginx"
 php_version: "7.4"
 php_packages:
   - php
+  - php-fpm
   - php-cli
   - php-common
   - php-gd
