--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -2,34 +2,34 @@
 # tasks file for wordpress
 
 # WordPress Configuration
-- name: create /var/www/ directory for unarchiving
+- name: create /var/www/{{ server_name }} directory for unarchiving
   file:
-    path: /var/www/
+    path: /var/www/{{ server_name }}
     state: directory
 
 - name: Download and unpack latest WordPress
   unarchive:
-    src: https://wordpress.org/latest.tar.gz
-    dest: "/var/www/"
+    src: https://wordpress.org/wordpress-{{ wp_version }}.tar.gz
+    dest: "/var/www/{{ server_name }}"
     remote_src: yes
-    creates: "/var/www/wordpress"
+    creates: "/var/www/{{ server_name }}/wordpress"
 
 - name: Set ownership
   file:
-    path: "/var/www/"
+    path: "/var/www/{{ server_name }}"
     state: directory
     recurse: yes
     owner: www-data
     group: www-data
 
 - name: Set permissions for directories
-  shell: "/usr/bin/find /var/www/wordpress/ -type d -exec chmod 750 {} \\;"
+  shell: "/usr/bin/find /var/www/{{ server_name }}/wordpress/ -type d -exec chmod 750 {} \\;"
 
 
 - name: Set permissions for files
-  shell: "/usr/bin/find /var/www/wordpress/ -type f -exec chmod 640 {} \\;"
+  shell: "/usr/bin/find /var/www/{{ server_name }}/wordpress/ -type f -exec chmod 640 {} \\;"
 
 - name: Set up wp-config
   template:
     src: "wp-config.php.j2"
-    dest: "/var/www/wordpress/wp-config.php"
+    dest: "/var/www/{{ server_name }}/wordpress/wp-config.php"
