--- a/inventory/group_vars/appservers/vars.yml
+++ b/inventory/group_vars/appservers/vars.yml
@@ -10,6 +10,19 @@ nginx_ssl_key: "{{ ssl_cert_path }}/private/{{ server_name }}.key"
 
 
 nginx_remove_default_vhost: true
+
+# nginx upstreams defined in hostvars
+
+# nginx_upstreams: 
+# - name: devopsit.ru
+#   strategy: "ip_hash" # "least_conn", etc.
+#   keepalive: 16 # optional 
+#   servers: { 
+#     "app01.devopsit.ru",
+#     "app02.devopsit.ru weight=2",
+#   }
+
+
 nginx_vhosts:
   # - listen: "80"
   #   server_name: "{{ server_name }} www.{{ server_name }}"
