--- a/inventory/group_vars/appservers/vars.yml
+++ b/inventory/group_vars/appservers/vars.yml
@@ -24,13 +24,13 @@ nginx_remove_default_vhost: true
 
 
 nginx_vhosts:
-  # - listen: "80"
-  #   server_name: "{{ server_name }} www.{{ server_name }}"
-  #   return: "301 https://{{ server_name }}$request_uri"
-  #   filename: "{{ server_name }}.80.conf"
-
-  # - listen: "443 ssl http2"
   - listen: "80"
+    server_name: "{{ server_name }} www.{{ server_name }}"
+    return: "301 https://{{ server_name }}$request_uri"
+    filename: "{{ server_name }}.80.conf"
+
+  - listen: "443 ssl http2"
+  # - listen: "80"
     server_name: "{{ server_name }}"
     root: "/var/www/{{ server_name }}/wordpress"
     index: "index.php index.html index.htm"
@@ -48,10 +48,10 @@ nginx_vhosts:
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           include fastcgi_params;
       }
-      # ssl_certificate     {{ nginx_ssl_crt }};
-      # ssl_certificate_key {{ nginx_ssl_key }};
-      # ssl_protocols       TLSv1.1 TLSv1.2;
-      # ssl_ciphers         HIGH:!aNULL:!MD5;
+      ssl_certificate     {{ nginx_ssl_crt }};
+      ssl_certificate_key {{ nginx_ssl_key }};
+      ssl_protocols       TLSv1.1 TLSv1.2;
+      ssl_ciphers         HIGH:!aNULL:!MD5;
 
 php_memory_limit: "128M"
 php_enable_php_fpm: true
