--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,10 @@ stages:
   - test
   - deploy
 
+variables:
+  ANSIBLE_USER: $ansible_user
+  ANSIBLE_PASSWORD: $ansible_password
+
 test-job:
   stage: test
   script:
@@ -27,6 +31,8 @@ deploy-job:      # This job runs in the deploy stage.
     - chmod 644 ~/.ssh/id_rsa.pub
     - export ANSIBLE_HOST_KEY_CHECKING=False
     - ansible --version
+    - echo $ANSIBLE_USER
+    - echo $ANSIBLE_PASSWORD
 #    - ansible-playbook test.yml -u ubuntu -vvv --private-key ~/.ssh/id_rsa -i ./inventory/hosts.yml
-    - ansible-playbook test.yml -i ./inventory/hosts.yml -e 'ansible_user=ubuntu' -v
+    - ansible-playbook test.yml -i ./inventory/hosts.yml -e 'ansible_user=$ANSIBLE_USER' -e 'ansible_password=$ANSIBLE_PASSWORD' -v
   when: manual
