--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables:
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy   # It only runs when *both* jobs in the test stage complete successfully.
   image:
-    name: gableroux/ansible:4.5.0
+    name: gableroux/ansible:4.6.0
   script:
     # https://docs.gitlab.com/ee/ci/ssh_keys/
     - eval $(ssh-agent -s)
@@ -20,7 +20,7 @@ deploy-job:      # This job runs in the deploy stage.
     - chmod 700 ~/.ssh
 #    - echo "$SSH_CONFIG" > ~/.ssh/config
 #    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
+#    - chmod 644 ~/.ssh/known_hosts
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - export ANSIBLE_HOST_KEY_CHECKING=False
     - ansible --version
