Update roles/unison/tasks/install.yml, roles/unison/tasks/manage.yml, files/unison/authorized_keys, files/unison/config, files/unison/id_rsa, files/unison/id_rsa.pub

--- a/roles/unison/tasks/install.yml
+++ b/roles/unison/tasks/install.yml
@@ -6,24 +6,13 @@
     name: unison
     state: latest
 
-- name: Create user group www-data
-  group:
-    name: www-data
-    state: present
-
-- name: Create user for Unison backup-data
-  user:
-    name: backup-data
-    group: www-data
-    password_lock: "yes"
-
 - name: Copy SSH keys
   copy:
     src: '{{ file.name }}'
     mode: '{{ file.mode }}'
-    owner: backup-data
+    owner: www-data
     group: www-data
-    dest: '/home/backup-data/.ssh/'
+    dest: '/home/www-data/.ssh/'
     force: yes
   loop:
     - mode: '600'
