--- a/roles/unison/tasks/manage.yml
+++ b/roles/unison/tasks/manage.yml
@@ -1,8 +1,8 @@
 
 - name: Create Unison config folder
   file:
-    path: "/home/backup-data/.unison"
-    owner: backup-data
+    path: "/home/www-data/.unison"
+    owner: www-data
     group: www-data
     state: directory
     mode: 0755
@@ -10,8 +10,8 @@
 - name: Generate Unison config file
   template:
     src: sync.prf.j2
-    dest: /home/backup-data/.unison/{{ item.name }}.prf
-    owner: backup-data
+    dest: /home/www-data/.unison/{{ item.name }}.prf
+    owner: www-data
     group: www-data
     mode: 0644
   with_items: "{{ unison_configs }}"
@@ -23,4 +23,4 @@
     minute: '{{ unison_cron.minute }}'
     hour: '{{ unison_cron.hour }}'
     job: "unison sync-wordpress.prf"
-    user: backup-data
+    user: www-data
