Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ deploy-job:
     - chmod 700 ~/.ssh
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - export ANSIBLE_HOST_KEY_CHECKING=False
+    - echo "$ANSIBLE_VAULT_PASS" > ./vault_pass
     - ansible --version
-    - ansible-playbook test.yml -v -i ./inventory/hosts.yml
+    - ansible-playbook test.yml -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
   when: manual
