--- a/inventory/group_vars/appservers/vars.yml
+++ b/inventory/group_vars/appservers/vars.yml
@@ -6,7 +6,7 @@ app_https_port: '443'
 # web app section
 server_name: "devopsit.ru"  
 wp_version: 5.3.10
-# db_hostname: ""
+db_hostname: "db01.devopsit.ru"
 ssl_cert_path: "/etc/ssl"
 ssl_cert_source_path: "files/cert/"
 
