--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,5 @@ deploy-job:
     - export ANSIBLE_HOST_KEY_CHECKING=False
     - echo "$ANSIBLE_VAULT_PASS" > ./vault_pass
     - ansible --version
-    - ansible-playbook play-webapp.yml --extra-vars "target=appservers" -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
+    - ansible-playbook play-webapp.yml --extra-vars "target=appservers" -vvv -i ./inventory/hosts.yml --vault-password-file ./vault_pass
   when: manual
