--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,13 @@ deploy-job:
     - export ANSIBLE_HOST_KEY_CHECKING=False
     - echo "$ANSIBLE_VAULT_PASS" > ./vault_pass
     - ansible --version
+    - ansible-playbook play-deploy-ssh-keys.yml -u ubuntu --extra-vars "target=production" -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
+    - ansible-playbook play-commontools.yml -u ubuntu --extra-vars "target=production" -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
+    - ansible-playbook play-firewall.yml -u ubuntu --extra-vars "target=production" -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
+    - ansible-playbook play-db.yml -u ubuntu --extra-vars "target=dbservers" -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
     - ansible-playbook play-webapp.yml -u ubuntu --extra-vars "target=appservers" -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
-  when: manual
+    - ansible-playbook play-monitoring.yml -u ubuntu --extra-vars "target=monservers" -v -i ./inventory/hosts.yml --vault-password-file ./vault_pass
+
+  only: 
+    - main
+#  when: manual
