fix backend port

--- a/inventory/group_vars/appservers/vars.yml
+++ b/inventory/group_vars/appservers/vars.yml
@@ -48,7 +48,7 @@ nginx_vhosts:
     extra_parameters: |
       location ~ \.php$ {
           fastcgi_split_path_info ^(.+\.php)(/.+)$;
-          fastcgi_pass backend:9000;
+          fastcgi_pass backend;
           fastcgi_index index.php;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           include fastcgi_params;
