add new ports to firewall rules.

--- a/inventory/group_vars/all/vars.yml
+++ b/inventory/group_vars/all/vars.yml
@@ -3,3 +3,7 @@
 # backup global settings
 backup_destination_folder: "/var/opt/backups"
 backup_scripts_folder: "/usr/local/bin"
+
+# firewall
+
+node_exporter_tcp: '9100' 
