Update roles/grafana/handlers/main.yml, roles/grafana/tasks/main.yml, roles/grafana/tasks/configure.yml, roles/grafana/tasks/install.yml, roles/grafana/templates/grafana.ini.j2, files/grafana/privkey.pem, files/grafana/cert.pem, roles/influxdb/defaults/main.yml, roles/influxdb/library/influxdb_user, roles/influxdb/tasks/main.yml, roles/influxdb/tasks/install.yml, roles/influxdb/tasks/configure.yml, inventory/group_vars/monservers/vars.yml, roles/mysqld_exporter/files/config/my.cnf, roles/mysqld_exporter/tasks/main.yml, roles/mysqld_exporter/templates/init.service.j2, roles/mysqld_exporter/vars/main.yml, roles/mysqld_exporter/README.md, roles/node_exporter/tasks/main.yml, roles/node_exporter/templates/init.service.j2, roles/node_exporter/vars/main.yml, roles/node_exporter/README.md, files/prometheus/prometheus.yml, files/prometheus/mysql_exporter_recording_rules.yml, files/prometheus/sd_files/mysqldexporter.yml, files/prometheus/sd_files/nodeexporter.yml, roles/prometheus/handlers/main.yml, roles/prometheus/tasks/main.yml, roles/telegraf/defaults/main.yml, roles/telegraf/files/telegraf/stub_status, roles/telegraf/handlers/main.yml, roles/telegraf/tasks/configure_appservers.yml, roles/telegraf/tasks/configure_monservers.yml, roles/telegraf/tasks/install.yml, roles/telegraf/tasks/main.yml, roles/telegraf/templates/telegraf.conf.appservers.j2, roles/telegraf/templates/telegraf.conf.monservers.j2, roles/telegraf/README.md, play-monitoring.yml, play-webapp.yml, play-unison.yml, play-db.yml, play-backup.yml, play-all.yml Deleted roles/grafana/defaults/main.yml, roles/grafana/meta/main.yml, roles/grafana/tasks/install_grafana.yml, roles/grafana/tests/inventory, roles/grafana/tests/test.yml, roles/grafana/vars/main.yml, roles/grafana/.travis.yml, roles/prometheus/defaults/main.yml, roles/prometheus/meta/main.yml, roles/prometheus/tasks/install_prometheus.yml, roles/prometheus/tests/inventory, roles/prometheus/tests/test.yml, roles/prometheus/.travis.yml

--- a/play-monitoring.yml
+++ b/play-monitoring.yml
@@ -3,6 +3,9 @@
   become: yes
   become_method: sudo
   roles:
+    - {role: node_exporter}
     - {role: prometheus}
     - {role: alertmanager}
     - {role: grafana}
+    - {role: influxdb}
+    - {role: telegraf, tags: [telegraf_monservers]}
