--- a/roles/grafana/handlers/main.yml
+++ b/roles/grafana/handlers/main.yml
@@ -7,3 +7,6 @@
     name: grafana-server
     enabled: yes
     state: started
+    
+- name: restart grafana-server
+  service: name=grafana-server state=restarted
