--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,7 +1,73 @@
 ---
 # tasks file for Prometheus
 
+- name: Create User prometheus
+  user:
+    name: prometheus
+    create_home: no
+    shell: /bin/false
 
-- name: Install Prometheus
-  include_tasks: tasks/install_prometheus.yml
+- name: Create directories for prometheus
+  file:
+    path: "{{ item }}"
+    state: directory
+    owner: prometheus
+    group: prometheus
+  loop:
+    - '/tmp/prometheus'
+    - '/etc/prometheus'
+    - '/var/lib/prometheus'
 
+- name: Download And Unzipped Prometheus
+  unarchive:
+    src: https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}.linux-amd64.tar.gz
+    dest: /tmp/prometheus
+    creates: /tmp/prometheus/prometheus-{{ prometheus_version }}.linux-amd64
+    remote_src: yes
+
+- name: Copy Bin Files From Unzipped to Prometheus
+  copy: 
+    src: /tmp/prometheus/prometheus-{{ prometheus_version }}.linux-amd64/{{ item }}
+    dest: /usr/local/bin/
+    remote_src: yes
+    mode: preserve
+    owner: prometheus
+    group: prometheus
+  loop: [ 'prometheus', 'promtool' ]
+
+- name: Copy conf Files From Unzipped to Prometheus
+  copy: 
+    src: /tmp/prometheus/prometheus-{{ prometheus_version }}.linux-amd64/{{ item }}
+    dest: /etc/prometheus/
+    remote_src: yes
+    mode: preserve
+    owner: prometheus
+    group: prometheus
+  loop: [ 'console_libraries', 'consoles']
+  
+
+- name: Create conf files for Prometheus
+  copy: 
+    src: files/prometheus/{{item}}
+    dest: /etc/prometheus
+    mode: preserve
+    owner: prometheus
+    group: prometheus
+  loop: [ 'prometheus.yml', 'mysql_exporter_recording_rules.yml', 'sd_files']
+  notify:
+    - reload prometheus
+
+    
+
+- name: Create File for Prometheus Systemd
+  template:
+    src: templates/prometheus.service
+    dest: /etc/systemd/system/
+  notify:
+    - systemd reload
+
+- name: Systemctl Prometheus Start
+  systemd:
+    name: prometheus
+    state: started
+    enabled: yes
