Update roles/telegraf_appserver/defaults/main.yml, roles/telegraf_appserver/files/telegraf/stub_status, roles/telegraf_appserver/handlers/main.yml, roles/telegraf_appserver/tasks/configure.yml, roles/telegraf_appserver/tasks/install.yml, roles/telegraf_appserver/tasks/main.yml, roles/telegraf_appserver/README.md, roles/telegraf_appserver/templates/telegraf.conf.appservers.j2, roles/telegraf_monserver/handlers/main.yml, roles/telegraf_monserver/tasks/configure.yml, roles/telegraf_monserver/tasks/install.yml, roles/telegraf_monserver/tasks/main.yml, roles/telegraf_monserver/templates/telegraf.conf.monservers.j2, play-webapp.yml, play-monitoring.yml Deleted roles/telegraf/tasks/configure_monservers.yml, roles/telegraf/templates/telegraf.conf.appservers.j2, roles/telegraf/templates/telegraf.conf.monservers.j2

--- a/play-monitoring.yml
+++ b/play-monitoring.yml
@@ -8,4 +8,4 @@
     - {role: alertmanager}
     - {role: grafana}
     - {role: influxdb}
-    - {role: telegraf, tags: [telegraf_monservers]}
+    - {role: telegraf_monserver}
